services/web/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ladesa-ro-web
spec:
  replicas: 1
  selector:
    matchLabels:
      name: ladesa-ro-web
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        name: ladesa-ro-web
    spec:
      containers:
        - name: ladesa-ro-web
          image: "nginx:1"
          imagePullPolicy: Always
          ports:
            # - containerPort: 3000
            - name: web
              containerPort: 80
          # envFrom:
          #   - configMapRef:
          #       name: ladesa-ro-web-configmap
          resources:
            requests:
              cpu: "50m"
              memory: "1Gi"
            limits:
              memory: "2Gi"
              cpu: "2"
