services/web/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ladesaro-web
  labels:
    name: ladesaro-web
spec:
  type: NodePort
  selector:
    name: ladesaro-web
  ports:
    - name: web
      targetPort: web
      port: 80
