services/web/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ladesaro-web-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  rules:
    - host: ["ladesa.com.br", "kluster.local"]
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ladesaro-web
                port:
                  name: web
